Adicionado EX06.php e EX07.php(Ambos Extra)

--- a/exercicios.html
+++ b/exercicios.html
@@ -33,6 +33,9 @@
     <a href="http://localhost/AULA-09-02-2022/EX15.php" target="_blank" style="color: rgb(0, 162, 255);"><p>Exercicio 015</p></a>
     <a href="http://localhost/AULA-09-02-2022/EX16.php" target="_blank" style="color: rgb(0, 162, 255);"><p>Exercicio 016</p></a>
     <a href="http://localhost/AULA-09-02-2022/EX17.php" target="_blank" style="color: rgb(0, 162, 255);"><p>Exercicio 017</p></a>
+    <a href="http://localhost/AULA-09-02-2022/EX07.php" target="_blank" style="color: rgb(0, 162, 255);"><p>Exercicio 07(21-02)</p></a>
+    <a href="http://localhost/AULA-09-02-2022/EX06.php" target="_blank" style="color: rgb(0, 162, 255);"><p>Exercicio 06(21-02)</p></a>
+
     <a href="http://localhost/AULA-09-02-2022/EXextra.php" target="_blank" style="color: red;"><p>Exercicio Extra</p></a>
 
     <!--CONTEUDO HTML-->
